--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="/client/css/game.css">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.slim.min.js" integrity="sha512-tj7TsH/mhgmfzJFXDAyYrVZbGz1tjT6/eglLxP5S7wvHz4XkTWqST0Ldx+oEWyre43PU0hlncsxCh+1u81QW9A==" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.0/socket.io.min.js" integrity="sha512-uhQJ7yRsSv2qpuYz6muYG9h5epmWXLBCg9T5/s3IgveaTlCUlK2HvtoIc4dPO6GTXjA5SrDbh6LKIUM2gxJLvA==" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.16.1/build/phaser.min.js" integrity="sha256-X1BGgfUnR+gaOBIHJcf3+ZNsOqerfV6UaQByz4oXxBQ=" crossorigin="anonymous"></script>
         <script>
             const MAP_WIDTH = "<%= MAP_WIDTH %>";
