--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,8 @@
         <script>
             const MAP_WIDTH = "<%= MAP_WIDTH %>";
             const MAP_HEIGHT = "<%= MAP_HEIGHT %>";
-            let BACKGROUND_ID = "<%= BACKGROUND_ID %>";
+            const PIXEL_SIZE = "<%= PIXEL_SIZE %>";
+            const CAMERA_SPEED = "<%= CAMERA_SPEED %>";
         </script>
         <script src="/client/js/game.js"></script>
 	</head>
