--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="/client/css/game.css">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.0/socket.io.min.js" integrity="sha512-uhQJ7yRsSv2qpuYz6muYG9h5epmWXLBCg9T5/s3IgveaTlCUlK2HvtoIc4dPO6GTXjA5SrDbh6LKIUM2gxJLvA==" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" integrity="sha512-gVG6WRMUYFaIdoocaxbqd02p3DUbhReTBWc7NTGB96i7vONrr7GuCZJHFFmkXEhpwilIWUnfRIMSlKaApwd/jg==" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.16.1/build/phaser.min.js" integrity="sha256-X1BGgfUnR+gaOBIHJcf3+ZNsOqerfV6UaQByz4oXxBQ=" crossorigin="anonymous"></script>
         <script>
             const MAP_WIDTH = "<%= MAP_WIDTH %>";
@@ -14,10 +14,11 @@
             const PIXEL_SIZE = "<%= PIXEL_SIZE %>";
             const CAMERA_SPEED = "<%= CAMERA_SPEED %>";
         </script>
+        <script src="/client/js/floatingText.min.js"></script>
         <script src="/client/js/game.js"></script>
 	</head>
 	<body>
-		<div id="snake-game"></div>
+        <div id="snake-game"></div>
 
 		<div id="menu" class="border border-dark rounded">
 			<form class="mx-2 my-2">
