--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
 				</div>
 				<br>
 				<div class="form-group">
-					<input id="name" class="form-control" type="text" maxlength="<%= MAX_NAME_LENGTH %>" placeholder="Name" value="Unnamed player" />
+					<input id="name" class="form-control" type="text" maxlength="<%= MAX_NAME_LENGTH %>" placeholder="Name Your Snake" value="" />
 				</div>
 				<div class="mb-2">
 					<input id="btn_play" class="form-control btn btn-success active" type="button" value="Play" />
