--- a/client/index.html
+++ b/client/index.html
@@ -6,15 +6,15 @@
 
         <title>Multiplayer snake</title>
 
-        <link rel="manifest" href="/client/manifest.json">
+        <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="/client/css/game.css">
+		<link rel="stylesheet" type="text/css" href="/css/game.css">
 
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" integrity="sha512-gVG6WRMUYFaIdoocaxbqd02p3DUbhReTBWc7NTGB96i7vONrr7GuCZJHFFmkXEhpwilIWUnfRIMSlKaApwd/jg==" crossorigin="anonymous"></script>-->
         <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.16.1/build/phaser.min.js" integrity="sha256-X1BGgfUnR+gaOBIHJcf3+ZNsOqerfV6UaQByz4oXxBQ=" crossorigin="anonymous"></script>
         <!--<script src="/client/js/kineticScrolling.min.js"></script>-->
-        <script src="/client/js/floatingText.min.js"></script>
-        <script src="/client/js/game.js"></script>
+        <script src="/js/floatingText.min.js"></script>
+        <script src="/js/game.js"></script>
 	</head>
 	<body>
         <div id="snake-game"></div>
