--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
         <title>Multiplayer snake</title>
 
         <link rel="manifest" href="/client/manifest.json">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css" integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha512-t4GWSVZO1eC8BM339Xd7Uphw5s17a86tIZIj8qRxhnKub6WoyhnrxeCIMeAqBPgdZGlCcG2PrZjMc+Wr78+5Xg==" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/client/css/game.css">
 
         <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.20.0/build/phaser.min.js" integrity="sha512-sXTcf7fO64rfPODYzSlx0FDOq2P0DAQbJgS2RVBzaR4ePVYXkZk2eNF7tu+OMbnz+SgKT9KafripKhPqZLwoJg==" crossorigin="anonymous"></script>
